# sam3-perception-hub

./: .env.example  CONTRIBUTING.md  LICENSE  Makefile  README.md  dev.bat  docker-compose.yml  pyproject.toml
config/: models.yaml
examples/scripts/: generate_test_media.py  run_demo_ar.py  run_demo_content.py  run_demo_privacy.py  run_demo_warehouse.py
infra/docker/postgres/: init.sql
infra/docker/prometheus/: prometheus.yml
infra/kubernetes/: deployment.yaml
sam3_perception_hub/: __init__.py
scripts/: download_models.py
services/agent-bridge/: Dockerfile  requirements.txt
services/agent-bridge/src/sam3_agent/: __init__.py  main.py
services/agent-bridge/src/sam3_agent/planning/: __init__.py  planner.py
services/agent-bridge/src/sam3_agent/tools/: perception_tools.py  reconstruction_tools.py
services/agent-bridge/src/sam3_agent/workflows/: orchestrator.py
services/perception-api/: Dockerfile  requirements.txt
services/perception-api/src/sam3_perception/: __init__.py  main.py
services/perception-api/src/sam3_perception/api/: routes.py  websocket.py
services/perception-api/src/sam3_perception/models/: __init__.py  sam3_wrapper.py
services/perception-api/src/sam3_perception/utils/: cache.py  config.py  logging.py  tracing.py
services/reconstruction-api/: Dockerfile  requirements.txt
services/reconstruction-api/src/sam3_reconstruction/: __init__.py  main.py
services/reconstruction-api/src/sam3_reconstruction/api/: routes.py
services/reconstruction-api/src/sam3_reconstruction/models/: sam3d_wrapper.py
services/reconstruction-api/src/sam3_reconstruction/utils/: config.py
tests/: conftest.py
tests/integration/: test_api.py
tests/unit/: test_perception.py
ui/playground/: next.config.js  package.json
ui/playground/src/app/: globals.css  layout.tsx  page.tsx
